[gd_scene load_steps=2 format=3 uid="uid://cax2u3yivh8g7"]

[ext_resource type="Script" path="res://scripts/model_viewer.gd" id="1_root"]

[node name="ModelViewer" type="Node3D"]
script = ExtResource("1_root")

[node name="ModelRoot" type="Node3D" parent="."]

[node name="OrbitCamera" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="OrbitCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
